# amplifier-collection-html-tools

./: .gitignore  COLLECTION_SUMMARY.md  MANIFEST.in  README.md  pyproject.toml  test-tool.html
agents/: html-tool-builder.md
amplifier_collection_html_tools/: __init__.py  cli.py
context/: cdn-libraries.md  cors-apis.md  patterns.md  simon-willison-article.md
docs/: QUICK_START.md
templates/: basic-tool.html
